--- a/hdbx_query/package.json
+++ b/hdbx_query/package.json
@@ -26,7 +26,8 @@
     "jquery": "^3.4.1",
     "vue-qr": "^1.3.8",
     "vue-router": "^3.0.1",
-    "vue-simple-uploader": "^0.7.1"
+    "vue-simple-uploader": "^0.7.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.3",
